--- a/bower.json
+++ b/bower.json
@@ -3,11 +3,8 @@
 	"main": [
 		"main.scss"
 	],
-	"ignore": [
-		"demo"
-	],
 	"dependencies": {
 		"o-colors": "^4.2.3",
-		"o-brand": ">=2.2.0 <4"
+		"o-brand": "^3.1.1"
 	}
 }
