--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
-	"private": true,
-	"name": "o-loading",
-	"devDependencies": {
-		"eslint": "^7.9.0",
-		"eslint-config-origami-component": "^2.1.0",
-		"origami-ci-tools": "^2.1.0",
-		"remark": "^12.0.1",
-		"remark-lint": "^7.0.1",
-		"remark-preset-lint-origami-component": "^1.2.0",
-		"stylelint": "^13.7.1"
-	}
+    "name": "o-loading",
+    "devDependencies": {
+        "eslint": "^7.9.0",
+        "eslint-config-origami-component": "^2.1.0",
+        "origami-ci-tools": "^2.1.0",
+        "remark": "^12.0.1",
+        "remark-lint": "^7.0.1",
+        "remark-preset-lint-origami-component": "^1.2.0",
+        "stylelint": "^13.7.1"
+    },
+    "main": "main.js",
+    "peerDependencies": {
+        "@financial-times/o-brand": "^3.1.1",
+        "@financial-times/o-colors": "^5.0.0"
+    },
+    "description": "A visual loading indicator, available in two colours and four sizes",
+    "publishConfig": {
+        "registry": "http://localhost:4873"
+    },
+    "version": "5.0.0-0"
 }
