update pkg versions

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     },
     "main": "main.js",
     "peerDependencies": {
-        "@financial-times/o-brand": "^3.1.1",
-        "@financial-times/o-colors": "^5.0.0"
+        "@financial-times/o-brand": "^100.0.0-3",
+        "@financial-times/o-colors": "^100.0.0-3"
     },
     "description": "A visual loading indicator, available in two colours and four sizes",
     "publishConfig": {
