--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "remark-preset-lint-origami-component": "^1.2.0",
         "stylelint": "^13.7.1"
     },
-    "main": "main.js",
+    "browser": "main.js",
     "peerDependencies": {
         "@financial-times/o-brand": "^100.0.0-6",
         "@financial-times/o-colors": "^100.0.0-6"
