sort package.json files

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
     "name": "@financial-times/o-loading",
+    "version": "100.0.0-7",
+    "description": "A visual loading indicator, available in two colours and four sizes",
+    "browser": "main.js",
     "devDependencies": {
         "eslint": "^7.9.0",
         "eslint-config-origami-component": "^2.1.0",
@@ -9,14 +12,11 @@
         "remark-preset-lint-origami-component": "^1.2.0",
         "stylelint": "^13.7.1"
     },
-    "browser": "main.js",
     "peerDependencies": {
         "@financial-times/o-brand": "^100.0.0-7",
         "@financial-times/o-colors": "^100.0.0-7"
     },
-    "description": "A visual loading indicator, available in two colours and four sizes",
     "publishConfig": {
         "registry": "http://localhost:4873"
-    },
-    "version": "100.0.0-7"
+    }
 }
