--- a/package.json
+++ b/package.json
@@ -2,7 +2,15 @@
     "name": "@financial-times/o-loading",
     "version": "100.0.0-7",
     "description": "A visual loading indicator, available in two colours and four sizes",
-    "browser": "main.js",
+    "license": "MIT",
+    "type": "module",
+    "exports": {
+        ".": {
+            "browser": "./main.js"
+        }
+    },
+    "browser": "./main.js",
+    "types": "types",
     "devDependencies": {
         "eslint": "^7.9.0",
         "eslint-config-origami-component": "^2.1.0",
