--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
         "stylelint": "^13.7.1"
     },
     "peerDependencies": {
-        "@financial-times/o-brand": "^100.0.0-8",
-        "@financial-times/o-colors": "^100.0.0-8"
+        "@financial-times/o-brand": "^100.0.0-9",
+        "@financial-times/o-colors": "^100.0.0-9"
     },
     "publishConfig": {
-        "registry": "http://localhost:4873"
+        "registry": "https://origami-npm-registry-prototype.herokuapp.com"
     }
 }
