--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
       "browser": "./main.js"
     }
   },
-
   "browser": "./main.js",
-  "types": "types",
+  "types": "./types/main.d.ts",
   "devDependencies": {
     "eslint": "^7.9.0",
     "eslint-config-origami-component": "^2.1.0",
@@ -29,7 +28,8 @@
     "remark": "^12.0.1",
     "remark-lint": "^7.0.1",
     "remark-preset-lint-origami-component": "^1.2.0",
-    "stylelint": "^13.7.1"
+    "stylelint": "^13.7.1",
+    "typescript": "^4.0.5"
   },
   "peerDependencies": {
     "@financial-times/o-brand": "^100.0.0-10",
